fixed node sixing and spacing

--- a/src/ideaBoard.css
+++ b/src/ideaBoard.css
@@ -23,3 +23,7 @@
     padding-top: 5px;
 
 }
+.flowpoint{
+    text-align: center;
+    height:210px;
+}
